# gemrabot

./: .gitignore  README.md  gitlab_test_data.json  main.py  manage.py  pyproject.toml  slack_api.py  structures.py  todo.md
api/: data_models.py  models.py  urls.py  utils.py  views.py
api/destinations/: interactions.py  messages.py  slack.py
api/migrations/: 0001_initial.py  0002_usergitlabaccesstoken_user_name.py  0003_usergitlaboauthtoken.py  0004_gitlabrepochmapping_gitlab_oauth_token.py  0005_auto_20200829_2053.py
api/sources/: gitlab.py
destinations/: slack.py
gemrabot/: asgi.py  middleware.py  redirects.py  settings.py  urls.py  wsgi.py
sources/: gitlab.py
