[tool.poetry]
name = "gemrabot"
version = "0.1.0"
description = "Gemrabot is a bot that helps you get your merge requests approved faster and easier"
authors = ["Marcin Gordziejewski <655590+Nicarim@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pip = "^20.2.2"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
httpx = "^0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
