[tool.poetry]
name = "gemrabot-v2"
version = "0.1.0"
description = ""
authors = ["Marcin Gordziejewski <655590+Nicarim@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
djangorestframework = "^3.11.1"
python-dotenv = "^0.14.0"
django-enumchoicefield = "^2.0.0"
unidiff = "^0.6.0"
python-gitlab = "^2.4.0"
requests = "^2.24.0"
pydantic = "^1.6.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
